--- a/bgsa_pseudoGUI.ipynb
+++ b/bgsa_pseudoGUI.ipynb
@@ -1083,6 +1083,9 @@
       "source": [
         ""
       ],
+	  "tags": [
+        "hide-cell",
+	  ],
       "execution_count": 43,
       "outputs": []
     }
