--- a/bgsa_pseudoGUI.ipynb
+++ b/bgsa_pseudoGUI.ipynb
@@ -68,11 +68,11 @@
     "  file_path = 'gland_86_2.jpg'\n",
     "\n",
     "  # if image was uploaded\n",
-    "  #if bool(uploader.value):\n",
-    "  #  uploaded_filename = next(iter(uploader.value))\n",
-    "  #  content = uploader.value[uploaded_filename]['content']\n",
-    "  #  with open('myfile', 'wb') as f: f.write(content)\n",
-    "  #  file_path = 'myfile'\n",
+    "  if bool(uploader.value):\n",
+    "    uploaded_filename = next(iter(uploader.value))\n",
+    "    content = uploader.value[uploaded_filename]['content']\n",
+    "    with open('myfile', 'wb') as f: f.write(content)\n",
+    "    file_path = 'myfile'\n",
     "\n",
     "  im = Image.open(os.path.join(os.getcwd(), file_path), mode='r')  \n",
     "  red_im = get_red(im)\n",
@@ -100,8 +100,8 @@
     "\n",
     "  print(\"\\n\")\n",
     "  print(\"Links to download mask images: \")\n",
-    "  display(FileLink(os.path.join(os.getcwd(), file_path + \"_brown.png\")))\n",
-    "  display(FileLink(os.path.join(os.getcwd(), file_path + \"_red.png\")))\n"
+    "  display(FileLink(\"./\" + file_path + \"_brown.png\")))\n",
+    "  display(FileLink(\"./\" + file_path + \"_red.png\")))\n"
    ]
   },
   {
