--- a/bgsa_pseudoGUI.ipynb
+++ b/bgsa_pseudoGUI.ipynb
@@ -55,32 +55,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def on_button_clicked(inputBrightness,inputContrast,inputHue,inputSaturation):\n",
+    "def fun_proc(inputBrightness,inputContrast,inputHue,inputSaturation):\n",
     "  print('Processing...')\n",
     "\n",
     "  #get default parameter values\n",
-    "  brightness = inputBrightness\n",
-    "  contrast = inputContrast\n",
-    "  hue = inputHue\n",
-    "  saturation = inputSaturation\n",
+    "  brightness = int(inputBrightness.value)\n",
+    "  contrast = int(inputContrast.value)\n",
+    "  hue = int(inputHue.value)\n",
+    "  saturation = float(inputSaturation.value)\n",
     "\n",
     "  #default file\n",
     "  file_path = 'gland_86_2.jpg'\n",
     "\n",
     "  # if image was uploaded\n",
-    "  if bool(uploader.value):\n",
-    "    uploaded_filename = next(iter(uploader.value))\n",
-    "    content = uploader.value[uploaded_filename]['content']\n",
-    "    with open('myfile', 'wb') as f: f.write(content)\n",
-    "    file_path = 'myfile'\n",
+    "  #if bool(uploader.value):\n",
+    "  #  uploaded_filename = next(iter(uploader.value))\n",
+    "  #  content = uploader.value[uploaded_filename]['content']\n",
+    "  #  with open('myfile', 'wb') as f: f.write(content)\n",
+    "  #  file_path = './myfile'\n",
     "\n",
     "  im = Image.open(os.path.join(os.getcwd(), file_path), mode='r')  \n",
-    "  red_im = get_red(im)\n",
-    "  brown_im = get_brown(im)\n",
+    "  red_im = get_red(im, brightness, contrast)\n",
+    "  brown_im = get_brown(im, brightness, contrast, hue, saturation)\n",
     "\n",
     "  brown_pix = get_white_pixels(brown_im)\n",
     "  red_pix = get_white_pixels(red_im)\n",
     "\n",
+    "  print(\"Set parameters:\")\n",
+    "  print(\"Brightness \"+str(brightness))\n",
+    "  print(\"contrast \"+str(contrast))\n",
+    "  print(\"hue \"+str(hue))\n",
+    "  print(\"saturation \"+str(saturation))\n",
+    "    \n",
     "  print(\"\\n\")\n",
     "  print(\"Results:\")\n",
     "  print(\"brown pixels \"+str(brown_pix))\n",
@@ -100,8 +106,8 @@
     "\n",
     "  print(\"\\n\")\n",
     "  print(\"Links to download mask images: \")\n",
-    "  display(FileLink(\"./\" + file_path + \"_brown.png\")))\n",
-    "  display(FileLink(\"./\" + file_path + \"_red.png\")))\n"
+    "  display(FileLink(\"./\" + file_path + \"_brown.png\"))\n",
+    "  display(FileLink(\"./\" + file_path + \"_red.png\"))\n"
    ]
   },
   {
@@ -127,7 +133,9 @@
     "    button = widgets.Button(description = 'Calculate!')\n",
     "    display(button)\n",
     "\n",
-    "    button.on_click(on_button_clicked(inputBrightness,inputContrast,inputHue,inputSaturation))"
+    "    def on_button_clicked(self):\n",
+    "        fun_proc(inputBrightness,inputContrast,inputHue,inputSaturation)\n",
+    "    button.on_click(on_button_clicked)"
    ]
   },
   {
@@ -185,12 +193,20 @@
    "execution_count": null,
    "metadata": {
     "cellView": "form",
-    "id": "QyKz3mHbuMbd"
+    "id": "QyKz3mHbuMbd",
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "pseudo_GUI()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -255,7 +271,7 @@
     "    zip_ref.extractall(\"test_mrxs\")\n",
     "\n",
     "\n",
-    "ndpi         = OpenSlide('/content/test_mrxs/CMU-1-Saved-1_16.mrxs')\n",
+    "ndpi         = OpenSlide('./test_mrxs/CMU-1-Saved-1_16.mrxs')\n",
     "ndpi_width   = ndpi.dimensions[0]\n",
     "ndpi_height  = ndpi.dimensions[1]\n",
     "total_width  = ndpi.level_dimensions[level][0]\n",
